--- a/zhenhua.homelake/pom.xml
+++ b/zhenhua.homelake/pom.xml
@@ -7,7 +7,7 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>zhenhua.homelake</name>
 	<url>http://maven.apache.org</url>
-	
+
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
@@ -15,6 +15,14 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
+
+        <!-- dependency for com.zhenhua.homelake.pool -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+			<version>2.4.2</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
