--- a/zhenhua.homelake/pom.xml
+++ b/zhenhua.homelake/pom.xml
@@ -16,13 +16,25 @@
 			<version>4.12</version>
 		</dependency>
 
-        <!-- dependency for com.zhenhua.homelake.pool -->
+		<!-- dependency for com.zhenhua.homelake.pool -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-pool2</artifactId>
 			<version>2.4.2</version>
 		</dependency>
-		
+
+		<!-- dependency for com.zhenhua.homelake.classloader -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
